Fix banner spacing

--- a/src/stylesheets/modules/_mod-banner.scss
+++ b/src/stylesheets/modules/_mod-banner.scss
@@ -60,6 +60,9 @@
       height: 343px;
     }
   }
+  .banner-content {
+    margin-left: 75px;
+  }
   .product-box-inner {
     @include position(absolute, $right: 0, $bottom: 0);
     max-width: 410px;
